# PeakRDL-halcpp

./: .gitignore  404.html  MANIFEST.in  README.md  index.html
.github/workflows/: build.yml  deploy.yml  test.yml
assets/css/: styles.95289f79.css
assets/js/: 05cfcea0.34511be9.js  14eb3368.dff20de6.js  17896441.46a433fb.js  19d06e5e.b0c27e16.js  1be78505.764568e8.js  2232ffbb.14361c89.js  282.3fd7b1a4.js  44e204f4.46df9af3.js  496e1005.636f60ee.js  50144a15.135b3cbe.js  52d3a46a.25368f8b.js  59931c3b.0c785e4d.js  69397342.74889925.js  79e16105.11cf6de1.js  935f2afb.a3e5acaa.js  a00415d9.dc893b23.js  bb1a6bd4.f5c2ecf7.js  (+8 more)
tests/: CMakeLists.txt
tests/cmake/: add_hal_test.cmake  deps.cmake  fw_utils.cmake
tests/cmake/toolchains/: riscv_toolchain.cmake
tests/cross_compile/: CMakeLists.txt  main.cpp
tests/cross_compile/fixp/: CMakeLists.txt  main.cpp
tests/cross_compile/simple/: CMakeLists.txt  main.cpp
tests/rdl_lib/: CMakeLists.txt  addrmap_hier_mixed.rdl  addrmap_hier_mixed2.rdl  addrmap_hier_ro.rdl  addrmap_hier_rw.rdl  addrmap_hier_rw_reg_arrays.rdl  addrmap_hier_wo.rdl  addrmap_mixed_access.rdl  addrmap_ro.rdl  addrmap_rw.rdl  addrmap_rw_reg_1d_array.rdl  addrmap_rw_reg_2d_array.rdl  addrmap_rw_reg_4d_array.rdl  addrmap_wo.rdl
tests/simple/: CMakeLists.txt  fixp.rdl  simple.rdl  simple_ro.rdl  test_fixp.cpp  test_simple.cpp  test_simple_ro.cpp
tests/soc/: CMakeLists.txt  soc.rdl
tests/soc/ips/: CMakeLists.txt
tests/soc/ips/gpio/: CMakeLists.txt  gpio.rdl
tests/soc/ips/i2c/: CMakeLists.txt  i2c.rdl
tests/test_utils/: mock_io.h  test_utils.h
(+33 files in other folders)
